@@ -9,6 +9,7 @@
 - make connect_to_server() return a status.
 - make find_dc_server() return a status.
 - make find_server() return a status.
+- fix return handling of do_reconnect() in ldap module.
 
 21/04/2015 autofs-5.1.1
 =======================
